--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,7 +1,7 @@
 $bg-img: (
-  "index": url(../../assets/img/4249454.jpg),
-  "challenge": url(../../assets/img/verde-bs.jpeg),
-  "nft": url(../../assets/img/blue-bs.jpeg),
-  "path": url(../../assets/img/red-bs.jpeg),
-  "download": url(../../assets/img/amarillo-bs.jpeg),
+    "index": url(../assets/img/4249454.jpg),
+    "challenge": url(../assets/img/verde-bs.jpeg),
+    "nft": url(../assets/img/blue-bs.jpeg),
+    "path": url(../assets/img/red-bs.jpeg),
+    "download": url(../assets/img/amarillo-bs.jpeg),
 );
