--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,6 @@ header {
   border-radius: 20%; }
 
 /* Index page */
-.container-index {
-  height: 200px; }
-
 .main-index {
   display: flex;
   width: 90%;
@@ -116,6 +113,25 @@ header {
 
 .sargento:hover + .hide {
   display: block; }
+
+.img-main {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  width: 100%;
+  height: 550px;
+  margin-top: 350px; }
+
+.rank {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px; }
+
+.rank-2:hover {
+  text-decoration: none; }
 
 /* Challenge page */
 h1 {
@@ -174,6 +190,11 @@ h4 {
   animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
   animation-delay: 0.3s; }
 
+.video {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px; }
+
 @-webkit-keyframes rotate-vert-center {
   0% {
     -webkit-transform: rotateY(0);
@@ -212,6 +233,20 @@ h4 {
   transition: 5s;
   box-shadow: inset 0 0 100px 100px #b8f5f7; }
 
+.video-characters {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 75px;
+  margin-top: 25px; }
+
+.video-characters2 {
+  height: 230px;
+  display: flex;
+  justify-content: space-evenly; }
+
+.navbar-toggler {
+  background-color: rgba(255, 255, 255, 0.438); }
+
 .form-path {
   display: flex;
   flex-direction: column; }
@@ -237,50 +272,50 @@ h4 {
 .download-button {
   padding: 25px; }
 
-footer {
-  margin-top: 150px;
-  width: 100%;
-  padding: 50px;
+.img {
   display: flex;
-  position: relative; }
+  justify-content: center;
+  max-width: auto;
+  height: 450px;
+  overflow: hidden; }
+
+.ranking {
+  display: flex;
+  justify-content: center;
+  color: black;
+  font-weight: bold;
+  background-color: #b6b6b6; }
+
+footer {
+  width: 100%;
+  margin-top: 200px;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  background-color: rgba(245, 245, 245, 0.479); }
 
 .contact {
-  width: 100%;
-  margin-top: 200px;
+  width: 250px;
+  background-color: rgba(255, 255, 255, 0.322);
+  font-size: small;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: flex-start;
   justify-content: center;
-  border-radius: 20%;
-  background-color: rgba(250, 235, 215, 0.673);
-  font-size: small; }
-
-.rank {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center; }
-
-.rank-2:hover {
-  text-decoration: none; }
+  font-weight: bold;
+  color: black; }
 
 .social-media {
-  width: 100%;
-  margin-top: 200px;
+  width: 100px;
+  height: 150px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: flex-end;
   justify-content: center;
-  background-color: rgba(250, 235, 215, 0.673);
-  border-radius: 20%; }
+  align-items: center;
+  background-color: rgba(250, 235, 215, 0.705);
+  gap: 5px; }
 
-.footer-challenge {
-  margin-top: auto; }
-
-@media (max-width: 730px) {
+@media (max-width: 820px) {
   .main-index {
     margin-top: 100px;
     gap: 50px;
@@ -290,7 +325,13 @@ footer {
     justify-items: center;
     padding: 0px; }
   .sargento {
-    margin: 0px; } }
+    margin: 0px; }
+  .video-characters {
+    flex-direction: column; }
+  .video-characters2 {
+    flex-direction: column; }
+  .img-main {
+    margin-top: 570px; } }
 
 @media (max-width: 580px) {
   .rank {
