--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,48 +1,31 @@
 footer {
-  // width: 90%;
-  margin-top: 150px;
-  // margin-left: 5%;
-  width: 100%;
-  padding: 50px;
-  display: flex;
-  position: relative;
+    width: 100%;
+    margin-top: 200px;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    background-color: rgba(245, 245, 245, 0.479);
 }
+
 .contact {
-  width: 100%;
-  margin-top: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: flex-start;
-  justify-content: center;
-  border-radius: 20%;
-  background-color: rgba(250, 235, 215, 0.673);
-  font-size: small;
-}
-
-.rank {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.rank-2:hover {
-  text-decoration: none;
+    width: 250px;
+    background-color: rgba(255, 255, 255, 0.322);
+    font-size: small;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: black;
 }
 
 .social-media {
-  width: 100%;
-  margin-top: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: flex-end;
-  justify-content: center;
-  background-color: rgba(250, 235, 215, 0.673);
-  border-radius: 20%;
-}
-.footer-challenge {
-  margin-top: auto;
+    width: 100px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(250, 235, 215, 0.705);
+    gap: 5px;
 }
