--- a/scss/layouts/_main.scss
+++ b/scss/layouts/_main.scss
@@ -1,7 +1,5 @@
 /* Index page */
-.container-index {
-    height: 200px;
-}
+
 .main-index {
     display: flex;
     width: 90%;
@@ -60,6 +58,26 @@
 .sargento:hover + .hide {
     display: block;
 }
+.img-main {
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    height: 550px;
+    margin-top: 350px;
+}
+.rank {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.rank-2:hover {
+    text-decoration: none;
+}
 
 /* Challenge page */
 h1 {
@@ -69,7 +87,6 @@ h1 {
 h2 {
     color: whitesmoke;
     text-align: center;
-    // text-decoration-line: overline;
 }
 h3 {
     text-align: center;
@@ -80,7 +97,6 @@ h4 {
     color: aqua;
     text-align: center;
     padding-bottom: 10px;
-    // text-decoration: underline;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -124,6 +140,11 @@ h4 {
     animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
     animation-delay: 0.3s;
 }
+.video {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
 
 @-webkit-keyframes rotate-vert-center {
     0% {
@@ -145,6 +166,7 @@ h4 {
         transform: rotateY(360deg);
     }
 }
+
 // Your NFT page
 
 .rectangle-nft {
@@ -168,6 +190,21 @@ h4 {
 .nft-cards:hover {
     transition: 5s;
     box-shadow: inset 0 0 100px 100px rgb(184, 245, 247);
+}
+
+.video-characters {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 75px;
+    margin-top: 25px;
+}
+.video-characters2 {
+    height: 230px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.navbar-toggler {
+    background-color: rgba(255, 255, 255, 0.438);
 }
 
 // Create Path page
@@ -201,4 +238,18 @@ h4 {
 
 .download-button {
     padding: 25px;
+}
+.img {
+    display: flex;
+    justify-content: center;
+    max-width: auto;
+    height: 450px;
+    overflow: hidden;
+}
+.ranking {
+    display: flex;
+    justify-content: center;
+    color: black;
+    font-weight: bold;
+    background-color: rgb(182, 182, 182);
 }
