--- a/scss/layouts/_mediaQ.scss
+++ b/scss/layouts/_mediaQ.scss
@@ -1,20 +1,30 @@
-@media (max-width: 730px) {
-  .main-index {
-    margin-top: 100px;
-    gap: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    padding: 0px;
-  }
-  .sargento {
-    margin: 0px;
-  }
+@media (max-width: 820px) {
+    .main-index {
+        margin-top: 100px;
+        gap: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        padding: 0px;
+    }
+    .sargento {
+        margin: 0px;
+    }
+    .video-characters {
+        flex-direction: column;
+    }
+    .video-characters2 {
+        // width: auto;
+        flex-direction: column;
+    }
+    .img-main {
+        margin-top: 570px;
+    }
 }
 
 @media (max-width: 580px) {
-  .rank {
-    display: none;
-  }
+    .rank {
+        display: none;
+    }
 }
